@@ -1,5 +1,5 @@
 '\" t
-.\" Sccsid @(#)ed.1	1.42 (gritter) 1/24/05
+.\" Sccsid @(#)ed.1	1.43 (gritter) 2/1/05
 .\" Parts taken from ed(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,7 +32,7 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH ED 1 "1/24/05" "Heirloom Toolchest" "User Commands"
+.TH ED 1 "2/1/05" "Heirloom Toolchest" "User Commands"
 .if t .ds q \(aa
 .if n .ds q '
 .SH NAME
@@ -970,12 +970,6 @@ A
 command cannot be subject to a
 .I g
 command.
-.PP
-Because 0 is an illegal address for a
-.I w
-command, it is not possible to
-create an empty file with
-.I ed.
 .PP
 The LC_COLLATE variable has currently no effect.
 Ranges in bracket expressions are ordered
